tests/paczka1/small_fuzzy/65266283.err
Error in line 1: WjUX A839 10,9
Error in line 4: j3uiZj AA82 235,7
Error in line 3: WjUX A259 85,8
Error in line 11: sgCNhQK A482 28,1
